[tool.poetry]
name = "stream2podcast"
version = "0.1.0"
description = "Convert an audio stream to a podcast feed"
authors = ["roedebaron"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
flask = "^2.2.3"
feedgen = "^0.9.0"
pydantic = "^1.10.7"
m3u8 = "^3.4.0"
mutagen = "^1.46.0"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0" 

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
typeCheckingMode = "strict"
reportMissingSuperCall = error
reportUnusedImport = none
reportUnusedVariable = none