[tool.poetry]
name = "feed-service"
version = "0.1.0"
description = "Generates podcast feeds from directories of audio files"
authors = ["holstt"]

[tool.poetry.dependencies]
python = "^3.10"
feedgen = "^0.9.0"
pydantic = "^1.10.7"
pyyaml = "^6.0"
python-slugify = "^8.0.1"
tzdata = "^2023.3"
pendulum = "^2.1.2"
validators = "^0.20.0"
watchdog = "^3.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.13.2"
pytest = "^7.4.3"
pyright = "^1.1.341"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Avoids conflict
[tool.isort]
profile = "black"

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.10"


# In strict, but don't show these errors
reportUnusedImport = "none"
reportUnusedVariable = "none"
reportUnusedFunction = "none"

# Not in strict, but show these errors
reportMissingSuperCall = "error"
reportCallInDefaultInitializer = "error"
reportImplicitOverride = "error"
reportImplicitStringConcatenation = "error"
reportPropertyTypeMismatch = "error"
reportShadowedImports = "error"
reportUninitializedInstanceVariable = "error"
reportUnnecessaryTypeIgnoreComment = "error"

# reportUnusedCallResult = "error"